demos: Fix links to sections on mobile

--- a/demos/styles/demo.css
+++ b/demos/styles/demo.css
@@ -137,6 +137,10 @@ p:first-child {
 	left: 0;
 }
 
+.demo-header-mobile ~ * .demo-linked-fieldset-anchor {
+	top: -6.5em;
+}
+
 .demo-header + .demo-container.oo-ui-panelLayout.demo-toolbars {
 	padding-top: 1em;
 }
